fix color and scrollbar width

--- a/src/modules/_scrollbar.scss
+++ b/src/modules/_scrollbar.scss
@@ -2,7 +2,7 @@
 $ps-rail-hover: #eee;
 $ps-bar-default: #aaa;
 $ps-bar-hover: #c1c1c1;
-
+$ps-bar-width : 6px;
 // Helper mixins
 @mixin border-radius($r) {
   -webkit-border-radius: $r;
@@ -76,24 +76,24 @@ $ps-bar-hover: #c1c1c1;
   >.ps-scrollbar-x-rail {
     @include scrollbar-rail-default;
     bottom: 3px; /* there must be 'bottom' for ps-scrollbar-x-rail */
-    height: 8px;
+    height: $ps-bar-width ;
 
     >.ps-scrollbar-x {
       @include scrollbar-default;
       bottom: 0; /* there must be 'bottom' for ps-scrollbar-x */
-      height: 8px;
+      height: $ps-bar-width ;
     }
   }
 
   >.ps-scrollbar-y-rail {
     @include scrollbar-rail-default;
     right: 3px; /* there must be 'right' for ps-scrollbar-y-rail */
-    width: 8px;
+    width: $ps-bar-width ;
 
     >.ps-scrollbar-y {
       @include scrollbar-default;
       right: 0; /* there must be 'right' for ps-scrollbar-y */
-      width: 8px;
+      width: $ps-bar-width ;
     }
   }
 
