--- a/src/variables/_variables-color.scss
+++ b/src/variables/_variables-color.scss
@@ -673,7 +673,7 @@ $dropdown-menu-header:             #76838f;
 $dropdown-menu-content:            #37474f;
 $dropdown-menu-footer-bgcolor:     #F3F7F9;
 $icon-circle-color:                $brand-primary;
-$icon-mapmark-color:               $gray-dark;
+$icon-mapmark-color:               #7d8488;
 $icon-laptop-sitemap-color:        $color-warning-light;
 $icon-laptop-loophole-color:       $color-primary-dark;
 $icon-virus-color:                 $color-danger-light;
